# dcel

./: README.md
dcel/: CMakeLists.txt  checker.h  dcel.h  edge.h  face.h  line.h  orientation3d.h  triangulator.h  vertex.h  viewer.cpp
dcel/tests/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  tets.cpp
line_manual_test/: CMakeLists.txt  line.h  lines.cpp  orientation.h  point2d.h
linkedDCEL/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  dcel.h  dcel_checker.cpp  dcel_triangulation.cpp  edge.cpp  edge.h  face.cpp  face.h  intersection.h  kirkpatrick.h  line.h  line_wrapper.h  linked_infinite_dcel.h  linked_triangle_dcel.h  node.h  orientation.h  triangle.cpp  triangle.h  vertex.h  viewer.cpp
visualizer/: CMakeLists.txt  line.h  viewer.cpp
visualizer/visualization/: main_window.cpp  main_window.h  visualization.cpp
